--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,9 @@ $RECYCLE.BIN/
 # Thumbnails
 ._*
 
+#settings (ip can't be shown)
+settings.py
+
 # Files that might appear in the root of a volume
 .DocumentRevisions-V100
 .fseventsd
